--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,13 @@
   margin: 0;
   padding: 0;
 }
-.container {
+body {
+  background-color: #2c2c2d;
 }
+
 .app-wrapper {
   color: #eee;
-  background-color: #2c2c2d;
+  height: 100%;
 }
 
 .header {
@@ -14,24 +16,24 @@
 }
 .header h1 {
   font-family: "Muli", serif;
-  font-size: 3rem;
+  font-size: 1.5rem;
   font-weight: 300;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   color: #f46036;
+  padding-top: 10px;
   text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
 }
 .balance {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2rem;
   text-align: center;
 }
 
 .balance h2 {
   font-family: "Baloo Da 2", serif;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 300;
   text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
 }
@@ -46,7 +48,6 @@
 .income-expense {
   display: flex;
   justify-content: space-between;
-  margin-top: 1em;
   font-family: "Muli", serif;
   text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
   text-align: center;
@@ -61,9 +62,8 @@
   color: #ff716e;
 }
 .income-expense h3 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 300;
-  margin-bottom: 2rem;
 }
 
 .income-expense p {
@@ -73,7 +73,7 @@
 }
 .form-wrapper {
   width: 90%;
-  margin: 0 auto;
+  margin: 1em auto;
 }
 
 .input-group {
@@ -89,7 +89,7 @@
   outline: none;
   transition: border-bottom 0.4s;
   font-size: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 0.3em;
   padding: 0.3rem;
 }
 .income input:not([type="submit"]):focus {
@@ -110,9 +110,9 @@
   color: #eee;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
   cursor: pointer;
-  margin-top: 1rem;
+  margin-top: 0.6rem;
   text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
 }
 .input-group input[type="submit"]:active {
   transform: translateY(0.3rem);
@@ -131,15 +131,14 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .transactions {
-  margin-top: 3rem;
+  margin-top: 1.5rem;
 }
 
 .transactions h2 {
   font-family: "Baloo da 2", serif;
-  font-size: 2rem;
+  font-size: 1.5rem;
   letter-spacing: 0.1rem;
   font-weight: 300;
-  margin-bottom: 2rem;
   text-align: center;
 }
 .transaction-list {
@@ -147,28 +146,20 @@ input[type="number"]::-webkit-inner-spin-button {
   overflow-y: auto;
 }
 .transaction {
-  list-style: none;
-  font-family: "Baloo da 2", serif;
-  letter-spacing: 0.1rem;
-  color: #fff;
-  border-radius: 0.3rem;
   display: flex;
-  justify-content: space-between;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-  background: red;
-  width: 75%;
-  margin-left: 8px;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 85%;
+  margin: 1em auto;
   padding: 8px;
+  border-radius: 5px;
 }
-.transactions-income .transaction {
+.transactions-income {
   background-color: #5a9b67;
 }
 
-.transactions-expense .transaction {
+.transactions-expense {
   background-color: #cf5856;
-}
-
-.transaction-text {
 }
 
 .transaction-amount {
@@ -179,9 +170,28 @@ input[type="number"]::-webkit-inner-spin-button {
   border: none;
   background-color: transparent;
   font-size: 1rem;
-  margin: 0 1rem;
+  margin: 0 4rem;
   color: #d4403e;
   text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
   cursor: pointer;
   outline: none;
+}
+
+.custom-select select {
+  width: 50%;
+  border: none;
+  outline-width: 0;
+  padding: 5px;
+  border-radius: 5px;
+  background: #fff;
+}
+
+option {
+  color: black;
+}
+option:focus {
+  color: #2c2c2d;
+}
+option:hover {
+  background: blue;
 }
