--- a/src/App.css
+++ b/src/App.css
@@ -183,7 +183,9 @@ input[type="number"]::-webkit-inner-spin-button {
   outline-width: 0;
   padding: 5px;
   border-radius: 5px;
-  background: #fff;
+  background: #5a9b67;
+  margin-top: 5px;
+  color: white;
 }
 
 option {
